--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,16 +9,44 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a9b00b0f2d.js" crossorigin="anonymous"></script>
-        <title>Document</title>
+        <title>Inicio</title>
     </head>
     <body>
+        <header>
+            <div class="container mx-0 w-100">
+				<a href="index.html">
+					<img src="img/logo.svg" class="logo">
+				</a>
+				<nav>
+					<a href="index.html">Inicio</a>
+					<a href="#catalogo">Catalogo Premios</a>
+					<a href="#puntos">Puntos</a>
+					<a href="">Acceder</a>
+					<a href="">Registrar</a>
+				</nav>
+				<a href="#" class="hamb"><i class="fas fa-bars"></i></a>
+			</div>
+        </header>
+        
+        <section id="catalogo">
+            <div class="container-fluid-ca align-items-center pr-20">
+                <div class="cuadrado-catalogo">
+                    <img id="img1" src="img/foto.png">
+                </div>
+                <div class="cuadrado-catalogo">
+                    <img id="img2" src="img/foto.png">
+                </div>
+            </div>
+        </section>	
+        <br>				
+            
         <footer>
             <div class="barra-footer">
                 &copy; Derechos Reservados - 2021
             </div>
         </footer>
-        <script src="{% static 'jquery.js' %}"></script>
-        <script src="{% static 'funcions.js' %}"></script>
+        <script src="js/jquery.js"></script>
+        <script src="js/funcions.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
