--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a9b00b0f2d.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/normalize.css ">
+		<link rel="stylesheet" href="css/styles.css ">
         <title>Inicio</title>
     </head>
     <body>
         <header>
             <div class="container mx-0 w-100">
 				<a href="index.html">
-					<img src="img/logo.svg" class="logo">
+					<img src="img/logo.jpg" class="logo">
 				</a>
 				<nav>
 					<a href="index.html">Inicio</a>
@@ -31,10 +33,10 @@
         <section id="catalogo">
             <div class="container-fluid-ca align-items-center pr-20">
                 <div class="cuadrado-catalogo">
-                    <img id="img1" src="img/foto.png">
+                    <img id="img1" src="img/foto.jpg">
                 </div>
                 <div class="cuadrado-catalogo">
-                    <img id="img2" src="img/foto.png">
+                    <img id="img2" src="img/foto.jpg">
                 </div>
             </div>
         </section>	
