--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a9b00b0f2d.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/normalize.css ">
-		<link rel="stylesheet" href="css/styles.css ">
+		<link rel="stylesheet" href="style.css ">
         <title>Inicio</title>
     </head>
     <body>
