--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <div class="container mx-0 w-100">
+            <div class="container mx-0 ">
 				<a href="index.html">
 					<img src="img/logo.jpg" class="logo">
 				</a>
