--- a/puntos.html
+++ b/puntos.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="keywords" content="puntos, supermercado, catalogo, precio, productos">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -11,7 +10,7 @@
         <script src="https://kit.fontawesome.com/a9b00b0f2d.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/normalize.css ">
 		<link rel="stylesheet" href="style.css ">
-        <title>Inicio</title>
+        <title>Puntos</title>
     </head>
     <body>
         <header>
@@ -29,21 +28,12 @@
 				<a href="#" class="hamb"><i class="fas fa-bars"></i></a>
 			</div>
         </header>
+        <br>
         <section>
-            <div>
-                <h2>Bienvenid@s clientes, esta pagina es para que puedas intercambiar tus puntos por productos de nuestro supermercado</h2>
-            </div>
-        </section>
-        <section id="catalogo">
-            <div class="container-fluid-ca align-items-center pr-20">
-                <div class="cuadrado-catalogo">
-                    <img id="img1" src="img/foto.jpg">
-                </div>
-                <div class="cuadrado-catalogo">
-                    <img id="img2" src="img/foto.jpg">
-                </div>
-            </div>
-        </section>	
+        <div>
+            <h3>Hola cliente, tus puntos son: </h3>
+        </div>
+    </section>
         <br>				
             
         <footer>
