--- a/puntos.html
+++ b/puntos.html
@@ -38,7 +38,8 @@
             
         <footer>
             <div class="barra-footer">
-                &copy; Derechos Reservados - 2021
+                <a href="https://p4s.co/equipo-gamer-63">Nuestro equipo</a>
+                <p>&copy; Derechos Reservados - 2021</p>
             </div>
         </footer>
         <script src="js/jquery.js"></script>
