--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                     <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail"  focusable="true"><img src="img/img1.jpeg"></svg>
             
                         <div class="card-body">
                         <p class="card-text">Producto 1</p>
@@ -88,7 +88,8 @@
             
         <footer>
             <div class="barra-footer">
-                &copy; Derechos Reservados - 2021
+                <a href="https://p4s.co/equipo-gamer-63">Nuestro equipo</a>
+                <p>&copy; Derechos Reservados - 2021</p>
             </div>
         </footer>
         <script src="js/jquery.js"></script>
