--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                     <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail"  focusable="true"><img src="img/img1.jpeg"></svg>
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             
                         <div class="card-body">
                         <p class="card-text">Producto 1</p>
@@ -86,8 +86,49 @@
         </section>	
         <br>				
             
-        <footer>
-            <div class="barra-footer">
+        <footer class="seccion" id="seccion">
+			<div class="container">
+				<div class="row">
+					<div class="columna-25 columna-mobile-100">
+						<img src="img/logofbk.svg" class="logo-footer">
+						<p>
+							Brindamos servicios con calidad e integridad. 
+						</p>
+					</div>
+					<div class="columna-25 columna-mobile-100">
+						<h3>
+							Datos de proyecto
+						</h3>
+						<ul>
+							<li>Sistema de gestion de puntos por compras</li>
+							<li>Equipo Gamer 63</li>
+							<li>Klotenerstrasse 15<br>CH-8304 Walliseller/Zürich/Scheiz</li>
+						</ul>
+					</div>
+					<div class="columna-25 columna-mobile-100">
+						<h3>
+							Redes Sociales
+						</h3>
+						<ul class="redes">
+							<li>
+								<a href="https://www.facebook.com/francy.baier">
+									<i class="fab fa-facebook-square"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.instagram.com/kosmetikerinfrancys/?hl=es">
+									<i class="fab fa-instagram-square"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.tiktok.com/@cosmetologa81?">
+									<i class="fab fa-tiktok"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
                 <a href="https://p4s.co/equipo-gamer-63">Nuestro equipo</a>
                 <p>&copy; Derechos Reservados - 2021</p>
             </div>
