--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					</div>
 					<div class="columna-25 columna-mobile-100">
 						<h3>
-							Redes Sociales
+							Contacto equipo
 						</h3>
 						<ul class="redes">
 							<li>
