--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
 						</h3>
 						<ul class="redes">
 							<li>
-								<a href="https://www.facebook.com/francy.baier">
+								<a href="">
 									<i class="fab fa-facebook-square"></i>
 								</a>
 							</li>
 							<li>
-								<a href="https://www.instagram.com/kosmetikerinfrancys/?hl=es">
+								<a href="">
 									<i class="fab fa-instagram-square"></i>
 								</a>
 							</li>
 							<li>
-								<a href="https://www.tiktok.com/@cosmetologa81?">
+								<a href="">
 									<i class="fab fa-tiktok"></i>
 								</a>
 							</li>
