--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						</h3>
 						<ul>
 							<li>Sistema de gestion de puntos por compras</li>
-							<li>Equipo Gamer 63</li>
+							<li><a href="https://p4s.co/equipo-gamer-63">Equipo Gamer 63</a></li>
                         </ul>
 					</div>
 					<div class="columna-25 columna-mobile-100">
@@ -111,17 +111,17 @@
 						<ul class="redes">
 							<li>
 								<a href="">
-									<i class="fab fa-facebook-square"></i>
+									<i class="fab far fa-envelope"></i>
 								</a>
 							</li>
 							<li>
 								<a href="">
-									<i class="fab fa-instagram-square"></i>
+									<i class="fab far fa-envelope"></i>
 								</a>
 							</li>
 							<li>
-								<a href="">
-									<i class="fab fa-tiktok"></i>
+								<a href="sebasbelmosxd@gmail.com">
+									<i class="fab far fa-envelope"> sebasbelmosxd@gmail.com</i>
 								</a>
 							</li>
 						</ul>
