--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<div class="columna-25 columna-mobile-100">
 						<img src="img/logofbk.svg" class="logo-footer">
 						<p>
-							. 
+							Crea, proyecta y prospera. 
 						</p>
 					</div>
 					<div class="columna-25 columna-mobile-100">
