--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 						</h3>
 						<ul class="redes">
 							<li>
-								<a href="">
-									<i class="fab far fa-envelope"></i>
+								<a href="kh22062005@gmail.com">
+									<i class="fab far fa-envelope"> kh22062005@gmail.com</i>
 								</a>
 							</li>
 							<li>
-								<a href="">
-									<i class="fab far fa-envelope"></i>
+								<a href="vanessakaroll2006@gmail.com">
+									<i class="fab far fa-envelope"> vanessakaroll2006@gmail.com</i>
 								</a>
 							</li>
 							<li>
