--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section>
             <br>
             <div>
-                <h4>Bienvenid@s clientes, esta pagina es para que puedas intercambiar tus puntos por productos de nuestro supermercado</h4>
+                <h4>Bienvenid@s clientes, esta pagina es para que puedas intercambiar tus puntos por premios</h4>
             </div>
         </section>
         <section id="catalogo">
@@ -106,7 +106,7 @@
 					</div>
 					<div class="columna-25 columna-mobile-100">
 						<h3>
-							Contacto equipo
+							Contacto del equipo
 						</h3>
 						<ul class="redes">
 							<li>
@@ -128,7 +128,6 @@
 					</div>
 				</div>
 			</div>
-                <a href="https://p4s.co/equipo-gamer-63">Nuestro equipo</a>
                 <p>&copy; Derechos Reservados - 2021</p>
             </div>
         </footer>
