--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="shortcut icon" href="img/logo.PNG">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a9b00b0f2d.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/normalize.css ">
@@ -17,7 +18,7 @@
         <header>
             <div class="container mx-0 ">
 				<a href="index.html">
-					<img src="img/logo.jpg" class="logo">
+					<img src="img/logo.png" class="logo">
 				</a>
 				<nav>
 					<a href="index.html">Inicio</a>
@@ -90,7 +91,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="columna-25 columna-mobile-100">
-						<img src="img/logofbk.svg" class="logo-footer">
+						<img src="img/logo.png" class="logo-footer">
 						<p>
 							Crea, proyecta y prospera. 
 						</p>
