--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<a href="index.html">Inicio</a>
 					<a href="#catalogo">Catalogo Premios</a>
 					<a href="puntos.html">Puntos</a>
+                    <a href="#seccion">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="">Registrar</a>
 				</nav>
@@ -43,7 +44,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                     <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"><img src="img/img1.jpeg" alt=""></svg>
             
                         <div class="card-body">
                         <p class="card-text">Producto 1</p>
@@ -91,7 +92,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="columna-25 columna-mobile-100">
-						<img src="img/logo.png" class="logo-footer">
+                        <img src="img/logo.png" class="logo-footer">
 						<p>
 							Crea, proyecta y prospera. 
 						</p>
