--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 					</div>
 				</div>
 			</div>
+            <div class="barra-footer">
                 <p>&copy; Derechos Reservados - 2021</p>
+            </div>
             </div>
         </footer>
         <script src="js/jquery.js"></script>
