--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     </head>
     <body>
         <header>
-            <div class="container mx-0 ">
+            <div class="contenedor">
 				<a href="index.html">
 					<img src="img/logo.png" class="logo">
 				</a>
 				<nav>
 					<a href="index.html">Inicio</a>
-					<a href="#catalogo">Catalogo Premios</a>
-					<a href="puntos.html">Puntos</a>
+					<a href="puntos.html"> Mis Puntos</a>
                     <a href="#seccion">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="">Registrar</a>
