--- a/login.html
+++ b/login.html
@@ -24,14 +24,13 @@
         <header>
             <div class="container mx-0 ">
 				<a href="index.html">
-					<img src="img/logo.jpg" class="logo">
+					<img src="img/logo.png" class="logo">
 				</a>
 				<nav>
 					<a href="index.html">Inicio</a>
-					<a href="#catalogo">Catalogo Premios</a>
 					<a href="puntos.html">Puntos</a>
-					<a href="">Acceder</a>
-					<a href="">Registrar</a>
+					<a href="login.html">Acceder</a>
+					<a href="registro.html">Registrar</a>
 				</nav>
 				<a href="#" class="hamb"><i class="fas fa-bars"></i></a>
 			</div>
@@ -39,7 +38,7 @@
         <br>
         <main class="form-signin">
         <form>
-            <img class="mb-4" src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <img class="mb-4" src="img/logo.PNG" alt="" width="100" height="                                                                                               ">
             <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
         
             <div class="form-floating">
