--- a/puntos.html
+++ b/puntos.html
@@ -20,10 +20,9 @@
 				</a>
 				<nav>
 					<a href="index.html">Inicio</a>
-					<a href="#catalogo">Catalogo Premios</a>
 					<a href="puntos.html">Puntos</a>
-					<a href="">Acceder</a>
-					<a href="">Registrar</a>
+					<a href="login.html">Acceder</a>
+					<a href="registro.html">Registrar</a>
 				</nav>
 				<a href="#" class="hamb"><i class="fas fa-bars"></i></a>
 			</div>
