--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
 					<a href="puntos.html"> Mis Puntos</a>
                     <a href="#seccion">Contactanos</a>
 					<a href="login.html">Acceder</a>
-					<a href="">Registrar</a>
+					<a href="registro.html">Registrar</a>
 				</nav>
 				<a href="#" class="hamb"><i class="fas fa-bars"></i></a>
 			</div>
         </header>
         <section>
             <br>
-            <div>
-                <h4>Bienvenid@s clientes, esta pagina es para que puedas intercambiar tus puntos por premios</h4>
+            <br>
+            <div style="padding-left: 115px;">
+                <h4>Bienvenid@s clientes, esta es nuestra pagina para que puedas intercambiar tus puntos por premios</h4>
             </div>
+            <br>
+            <br>
         </section>
         <section id="servicios" class="seccion">
             <div class="container">
@@ -45,7 +48,7 @@
                                 <img src="img/img1.jpeg">
                             </div>
                             <div class="bloque-contenido-servicio">
-                                <h3>Premios 1</h3>
+                                <h3>Premios Grupo 1</h3>
                                 <p>Click en el boton para ver los premios</p>
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -57,7 +60,7 @@
                                 <img src="img/img2.jpg">
                             </div>
                             <div class="bloque-contenido-servicio">
-                                <h3>Premios 2</h3>
+                                <h3>Premios Grupo 2</h3>
                                 <p>Click en el boton para ver los premios</p>
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -69,7 +72,7 @@
                                 <img src="img/img3.jpg">
                             </div>
                             <div class="bloque-contenido-servicio">
-                                <h3>Premios 3</h3>
+                                <h3>Premios Grupo 3</h3>
                                 <p>Click en el boton para ver los premios</p>
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -78,6 +81,8 @@
                 </div>
             </div>
         </section>	
+        <br>
+        <br>
         <br>				
             
         <footer class="seccion" id="seccion">
