--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
     <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
     <meta name="theme-color" content="#7952b3">
+    <link rel="shortcut icon" href="img/logo.PNG">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a9b00b0f2d.js" crossorigin="anonymous"></script>
@@ -22,13 +23,14 @@
     <link rel="stylesheet" href="style.css ">
     <body class="text-center">
         <header>
-            <div class="container mx-0 ">
+            <div class="contenedor">
 				<a href="index.html">
 					<img src="img/logo.png" class="logo">
 				</a>
 				<nav>
 					<a href="index.html">Inicio</a>
-					<a href="puntos.html">Puntos</a>
+					<a href="puntos.html"> Mis Puntos</a>
+                    <a href="#seccion">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="registro.html">Registrar</a>
 				</nav>
@@ -36,9 +38,9 @@
 			</div>
         </header>
         <br>
+        <br>
         <main class="form-signin">
         <form>
-            <img class="mb-4" src="img/logo.PNG" alt="" width="100" height="                                                                                               ">
             <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
         
             <div class="form-floating">
@@ -49,10 +51,16 @@
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Contraseña</label>
             </div>
+            <br>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Acceder</button>
+            <br>
                     </form>
         </main>
-    </body>
+        <br>
+        <br>
+        <br>
+        <br>
+    
     </head>
     <footer>
                 <div class="barra-footer">
@@ -60,7 +68,7 @@
                 </div>
             </footer>
             <script src="js/jquery.js"></script>
-            <script src="js/funcions.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
-
+        <script src="js/funcions.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        </body>
 </html>
