--- a/puntos.html
+++ b/puntos.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="shortcut icon" href="img/logo.PNG">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a9b00b0f2d.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/normalize.css ">
@@ -14,13 +15,14 @@
     </head>
     <body>
         <header>
-            <div class="container mx-0 ">
+            <div class="contenedor">
 				<a href="index.html">
-					<img src="img/logo.jpg" class="logo">
+					<img src="img/logo.png" class="logo">
 				</a>
 				<nav>
 					<a href="index.html">Inicio</a>
-					<a href="puntos.html">Puntos</a>
+					<a href="puntos.html"> Mis Puntos</a>
+                    <a href="#seccion">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="registro.html">Registrar</a>
 				</nav>
@@ -28,12 +30,20 @@
 			</div>
         </header>
         <br>
+        <br>
+        <br>
+        <br>
         <section>
         <div>
             <h3>Hola cliente, tus puntos son: </h3>
         </div>
     </section>
-        <br>				
+        <br>
+        <br>
+        <br>
+        <br>
+        
+        <p>Canjeé sus puntos por premios.  <a href="index.html">Ver mas</a></p> 
             
         <footer>
             <div class="barra-footer">
