--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<nav>
 					<a href="index.html">Inicio</a>
 					<a href="puntos.html"> Mis Puntos</a>
-                    <a href="#seccion">Contactanos</a>
+                    <a href="index.html">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="registro.html">Registrar</a>
 				</nav>
@@ -48,7 +48,7 @@
                                 <img src="img/img1.jpeg">
                             </div>
                             <div class="bloque-contenido-servicio">
-                                <h3>Premios Grupo 1</h3>
+                                <h3>Premios Grupo #1</h3>
                                 <p>Click en el boton para ver los premios</p>
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -60,7 +60,7 @@
                                 <img src="img/img2.jpg">
                             </div>
                             <div class="bloque-contenido-servicio">
-                                <h3>Premios Grupo 2</h3>
+                                <h3>Premios Grupo #2</h3>
                                 <p>Click en el boton para ver los premios</p>
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -72,7 +72,7 @@
                                 <img src="img/img3.jpg">
                             </div>
                             <div class="bloque-contenido-servicio">
-                                <h3>Premios Grupo 3</h3>
+                                <h3>Premios Grupo #3</h3>
                                 <p>Click en el boton para ver los premios</p>
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
