--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 				<nav>
 					<a href="index.html">Inicio</a>
 					<a href="puntos.html"> Mis Puntos</a>
-                    <a href="#seccion">Contactanos</a>
+                    <a href="index.html">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="registro.html">Registrar</a>
 				</nav>
@@ -42,20 +42,21 @@
         <br>
         <main class="form-signin">
         <form>
-            <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
-        
-            <div class="form-floating">
+            <h1 class="h3 mb-3 fw-bold">Iniciar Sesion</h1>
+        <br>
+        <br>
+            <div class="form-floating" style="width: 45%; margin-left: 365px;">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Correo electronico</label>
             </div>
             <br>
-            <div class="form-floating">
+            <div class="form-floating" style="width: 45%; margin-left: 365px;">
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Contraseña</label>
             </div>
             <br>
             <p>Si no tiene cuenta aún   <a href="registro.html">  Registrarse</a></p>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Acceder</button>
+            <button class="w-10 btn btn-lg btn-danger" type="submit">Acceder</button>
             <br>
                     </form>
         </main>
