--- a/puntos.html
+++ b/puntos.html
@@ -22,7 +22,7 @@
 				<nav>
 					<a href="index.html">Inicio</a>
 					<a href="puntos.html"> Mis Puntos</a>
-                    <a href="#seccion">Contactanos</a>
+                    <a href="index.html">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="registro.html">Registrar</a>
 				</nav>
