--- a/registro.html
+++ b/registro.html
@@ -31,7 +31,7 @@
 				<nav>
 					<a href="index.html">Inicio</a>
 					<a href="puntos.html"> Mis Puntos</a>
-                    <a href="#seccion">Contactanos</a>
+                    <a href="index.html">Contactanos</a>
 					<a href="login.html">Acceder</a>
 					<a href="registro.html">Registrar</a>
 				</nav>
@@ -41,36 +41,36 @@
         <br>
         <main class="form-signin">
         <form>
-            <h1 class="h3 mb-3 fw-normal">Registrarse</h1>
-        
-            <div class="form-floating">
+            <h1 class="h3 mb-3 fw-bold">Registrarse</h1>
+        <br>
+            <div class="form-floating" style="width: 45%; margin-left: 365px;">
                 <input type="text" class="form-control" id="floatingInput" placeholder="Nombre">
                 <label for="floatingInput">Nombre</label>
                 </div>
                 <br>
-                <div class="form-floating">
+                <div class="form-floating" style="width: 45%; margin-left: 365px;">
                     <input type="text" class="form-control" id="floatingInput" placeholder="Apellidos">
                     <label for="floatingInput">Apellidos</label>
                     </div>
                     <br>
-            <div class="form-floating">
+            <div class="form-floating" style="width: 45%; margin-left: 365px;">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Correo electronico</label>
             </div>
             <br>
-            <div class="form-floating">
+            <div class="form-floating" style="width: 45%; margin-left: 365px;">
                 <input type="datetime-local" class="form-control" id="datetime" name="datetime">
                 <label for="floatingInput">Fecha de Nacimiento</label>
                 </div>
                 <br>
-            <div class="form-floating">
+            <div class="form-floating" style="width: 45%; margin-left: 365px;">
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Contraseña</label>
             </div>
             <br>
             <p>Si ya tiene cuenta    <a href="login.html">  Iniciar Sesion</a></p>
             <br>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Registrar</button>
+            <button class="w-10 btn btn-lg btn-danger" type="submit">Registrar</button>
             </form>
         </main>
     </head>
