last update pag

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         <br>				
             
         <footer class="seccion" id="seccion">
-			<div class="container">
+			<div class="contenedor">
 				<div class="row">
-					<div class="columna-25 columna-mobile-100">
+					<div class="columna-25">
                         <img src="img/logo.png" class="logo-footer">
 						<p>
 							Crea, proyecta y prospera. 
@@ -103,7 +103,7 @@
 							<li><a href="https://p4s.co/equipo-gamer-63">Equipo Gamer 63</a></li>
                         </ul>
 					</div>
-					<div class="columna-25 columna-mobile-100">
+					<div class="columna-25">
 						<h3>
 							Contacto del equipo
 						</h3>
